fix(google-button): change button severity to contrast and ensure consistent padding

--- a/src/app/shared/ui/google-button/google-button.component.scss
+++ b/src/app/shared/ui/google-button/google-button.component.scss
@@ -5,6 +5,10 @@
   border: 1px solid $primary-color !important;
 }
 
+:host ::ng-deep .p-button {
+  padding: 8px !important;
+}
+
 :host {
   width: 100%;
 }
